Ajusta input models e utiliza SqlServer

--- a/GerenciamentoTodo.Api/appsettings.json
+++ b/GerenciamentoTodo.Api/appsettings.json
@@ -9,6 +9,9 @@
   "Jwt": {
     "Key": "Está é minha senha secreta para proteção dos tokens",
     "Issuer": "GerenciamentoTodo",
-    "Audience":  "ClientUser"
+    "Audience": "ClientUser"
+  },
+  "ConnectionStrings": {
+    "ToDoCs": "Server=BEATRIZ\\SQLEXPRESS;Database=ToDoDb;Trusted_Connection=True;TrustServerCertificate=True"
   }
 }
