--- a/GerenciamentoTodo.Api/GerenciamentoTodo.Api.csproj
+++ b/GerenciamentoTodo.Api/GerenciamentoTodo.Api.csproj
@@ -8,11 +8,17 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.28" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.17">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.17" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\GerenciamentoTodo.Application\GerenciamentoTodo.Application.csproj" />
+    <ProjectReference Include="..\GerenciamentoTodo.Infrastructure\GerenciamentoTodo.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
